--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="drawer_close">fechou</string>
 
     <string name="app_name">Média USJT</string>
-    <string name="cadastramentoNome">Matéria</string>
-    <string name="cadastramentoNota">Nota Mínima</string>
+    <string name="matterName">Nome da Matéria</string>
+    <string name="required_grade">Nota Mínima</string>
     <string name="cadastramentoSalvar">Salvar Nota</string>
     <string name="descrUSJT">Logo Fundo</string>
     <string name="tvTitulo">Calcule sua Média</string>
@@ -48,4 +48,5 @@
     <string name="updated">Atualizado</string>
     <string name="not_updated">Não Atualizado</string>
     <string name="grades_removed_message">Todas as notas excluidas</string>
+    <string name="new_grade_title">Salvar Nota</string>
 </resources>
